minor FAQ tweaks

--- a/www/support/index.html
+++ b/www/support/index.html
@@ -7,12 +7,11 @@ redirect_from:
 
 <div class="row">
     <div class="col-md-12">
-        <h3>Can I use these images without royalties/attribution/etc?  Do you even have the authority to grant me such rights?</h3>
-	<p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
-	<p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.  
-	No lawyers necessary: just <a href="https://github.com/VectorLogoZone/vectorlogozone/issues/new">submit an issue</a> on github!
-	Just so you know: I am usually using them on a credits page (<a href="http://www.numberplanet.com/support/credits.html">example</a>), so it might be in your best interests to let me slide.  
-	Alternatively, it would be great if you provided the appropriately sized images yourself.</p>
+        <h3>Can I use these images without royalties/attribution/etc?</h3>
+        <p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
+        <p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.
+        No lawyers necessary: just <a href="https://github.com/VectorLogoZone/vectorlogozone/issues/new">submit an issue</a> on github!
+        Alternatively, it would be great if you provided the appropriately sized images yourself.</p>
     </div>
 </div>
 
@@ -26,6 +25,14 @@ redirect_from:
 
 <div class="row">
     <div class="col-md-12">
+        <h3>How reliable is the site?</h3>
+        <p>It is a static site, so it should be quite reliable.  You can check the <a href="https://nodeping.com/reports/checks/wbe44oj5-13fx-4h6l-8ojp-tlbno9b01gmu">recent uptime report</a> to see for yourself!</p>
+        <p>That said, there are no guarantees.  Feel free to host the images you use on your own servers.</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
         <h3>Why only vector images? </h3>
         <p>Vector images look so much better, especially on high-resolution displays, and don't require any of the 
 	   hacks needed for responsive images: they &ldquo;just work&rdquo;!</p>
@@ -34,16 +41,16 @@ redirect_from:
 
 <div class="row">
     <div class="col-md-12">
-        <h3>Will my users be able to see them?</h3>
-        <p>According to <a href="http://caniuse.com/#feat=svg-img">Can I Use</a>, 96% will be able to see them.</p>
+        <h3>So why the raster <code>card</code> images? </h3>
+        <p><i>Sigh</i>.  Unfortunately, certain websites (*cough* Facebook and Twitter *cough*) only support raster
+        images for the thumbnail when you share a page.</p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-12">
-        <h3>How reliable is the site?  Can I count on it to be up all the time?</h3>
-        <p>It is a static site, so it should be quite reliable.  You can check the <a href="https://nodeping.com/reports/checks/wbe44oj5-13fx-4h6l-8ojp-tlbno9b01gmu">recent uptime report</a> to see for yourself!</p>
-        <p>That said, there are no guarantees.  Feel free to host the images you use on your own servers.</p>
+        <h3>Will my users be able to see them?</h3>
+        <p>According to <a href="http://caniuse.com/#feat=svg-img">Can I Use</a>, 96% will be able to see them.</p>
     </div>
 </div>
 
@@ -77,7 +84,8 @@ redirect_from:
     <div class="col-md-12">
         <h3>How can I identify the font used in a logo?</h3>
         <p><a href="http://www.myfonts.com/WhatTheFont/">WhatTheFont</a> - upload a sample image.  They also have an active <a href="http://www.myfonts.com/WhatTheFont/forum/">forum</a> where fonts experts will help.</p>
-	<p><a href="http://www.identifont.com/">IdentiFont</a> - answer a series of questions about specific characters.  Be sure to use the character filter.</p>
+        <p><a href="http://www.identifont.com/">IdentiFont</a> - answer a series of questions about specific characters.  Be sure to use the character filter.</p>
+        <p><a href="http://www.chengyinliu.com/whatfont.html">WhatFont bookmarklet</a> - really nice and easy way to see the fonts used in an HTML page</p>
     </div>
 </div>
 
