--- a/www/report/index.html
+++ b/www/report/index.html
@@ -20,9 +20,11 @@ redirect_from: /logos/links.html
     <li><a href="colors.html">Colors</a> - detailed color report.</li>
     <li><a href="fonts.html">Fonts</a> - detailed font report.</li>
     <li><a href="metadata.html" rel="nofollow">Metadata Report</a> - what links are available for each logo.</li>
+    <li><a href="least-social.html">Least social</a> - logos with the no social media links</li>
     <li><a href="most-social.html">Most social</a> - logos with the most social media links</li>
     <li><a href="unknown-meta.html">Unknown metadata keys</a> - to help cleanup garbage entries in the metadata</li>
-    <li><a href="notes.html">Notes</a></li>
+    <li><a href="notes.html">Notes</a> - that should have been removed before publishing</li>
+    <li><a href="first-letter.html">First letter</a> - Counts by first letter</li>
 </ul>
 
 <h2>Comparisons</h2>
