--- a/www/report/metadata.html
+++ b/www/report/metadata.html
@@ -78,6 +78,7 @@ redirect_from: /logos/metadata.html
 {% endif %}{% endfor %}
     </tbody>
     <tfoot>
+        {%- if logocount > 0 %}
         <tr>
             <td>&nbsp;</td>
             <td class="text-center">{{colorcount | intcomma}}<br/>({{ colorcount | times:100 | divided_by: logocount}}%)</td>
@@ -88,6 +89,7 @@ redirect_from: /logos/metadata.html
             <td>&nbsp;</td>
             <td class="text-center">{{tagcount | intcomma}}<br/>({{ tagcount | times:100 | divided_by: logocount}}%)</td>
         </tr>
+        {%- endif %}
         <tr>
             <th>&nbsp;</th>
             <th style="text-align:center">Color</th>
@@ -102,7 +104,7 @@ redirect_from: /logos/metadata.html
 </table>
 
 <p>{{ logocount | intcomma }} logo and placeholder pages</p>
-
+{%- if logocount > 0 %}
 <table class="table table-striped table-bordered" style="width:auto;">
     <thead>
     <tr>
@@ -169,3 +171,4 @@ redirect_from: /logos/metadata.html
     </tr>
     </tbody>
 </table>
+{%- endif %}
