--- a/www/search-other.html
+++ b/www/search-other.html
@@ -4,10 +4,11 @@ title: Search Other Websites
 ---
 {% include searchtab.html %}
 <div class="row clearfix" style="padding-bottom:20px;">
-    <div class="col-md-6 col-md-offset-3 column">
+    <div class="col-md-6 offset-md-3">
         <form action="get" class="form-inline" id="site_search">
-            <div class="form-group">
-                <label class="sr-only" for="q">Search query</label><input autocomplete="off" autofocus="autofocus" class="form-control" id="q" name="q" placeholder="Search term" type="text">
+            <label class="sr-only" for="q">Search query</label>
+            <div class="input-group">
+                <input autocomplete="off" autofocus="autofocus" class="form-control mr-sm-2" id="q" name="q" placeholder="Search term" type="text">
             </div>
         </form>
     </div>
