--- a/www/search-github.html
+++ b/www/search-github.html
@@ -4,11 +4,12 @@ title: Search Github
 ---
 {% include searchtab.html %}
 <div class="row clearfix" style="padding-bottom:20px;">
-    <div class="col-md-6 col-md-offset-3 column">
+    <div class="col-md-6 offset-md-3">
         <img alt="Loading..." src="/images/spinner.svg" style="height:64px" id="wait"/>
         <form action="get" class="form-inline" id="site_search" style="display:none;">
-            <div class="form-group">
-                 <label class="sr-only" for="q">Search query</label><input autocomplete="off" autofocus="autofocus" class="form-control" id="q" name="q" placeholder="Search terms" type="text">
+            <label class="sr-only" for="q">Search query</label>
+            <div class="input-group">
+                 <input autocomplete="off" autofocus="autofocus" class="form-control mr-sm-2" id="q" name="q" placeholder="Search terms" type="text">
             </div>
 		<button type="submit" class="btn btn-primary">Search Github</button>
         </form>
