--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@ I wanted images that were:</p>
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Search</h5>
-                <p class="card-text">Full-text search with instant results, with the option to search other github repos as well.</p>
+                <p class="card-text">Full-text search with instant visual results.</p>
             </div>
             <div class="card-footer">
                 <a href="/search.html" class="btn btn-success btn-block">Instant Search</a>
@@ -63,11 +63,12 @@ I wanted images that were:</p>
         </div>
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Contribute</h5>
-                <p class="card-text">It would be great if you could help, but we need to keep things consistent!</p>
+                <h5 class="card-title">Alternatives</h5>
+                <p class="card-text">While VLZ is awesome, it isn't quite complete (yet).  In the meantime, you can use the same
+                awesome instant search for logos in other Github repositories.</p>
             </div>
             <div class="card-footer">
-                <a href="#" class="btn btn-success btn-block">Guidelines</a>
+                <a href="/search-github.html" class="btn btn-success btn-block">Github Search</a>
             </div>
         </div>
 </div>
