--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -10,11 +10,11 @@ layout: none
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ page.title }}</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 	<link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
-	<script src="/js/jquery-2.1.4.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <script src="/js/Vibrant.js"></script>
 	<style type="text/css">
 	html, body { width: 100%; height: 100% }
 	#preview-container { width: 100%; height:100%;background-image: url("/images/preview/background_light.png"); background-repeat: repeat-x repeat-y;}
@@ -35,37 +35,37 @@ layout: none
 	</style>
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top py-1">
 		<div class="container">
-<p class="navbar-text hidden-xs hidden-sm" href="/">Image Preview</p>
+<p class="navbar-text mb-0 hidden-xs hidden-sm" href="/">Image Preview</p>
 <div class="btn-group" role="group" aria-label="Background">
-  <button class="btn btn-default navbar-btn background-btn" data-background="grid" title="Checkboard background" type="button"><i class="fas fa-th-large"></i></button>
-  <button class="btn btn-default navbar-btn background-btn" data-background="dark" title="Dark background" type="button"><i class="fas fa-square"></i></button>
-  <button class="btn btn-default navbar-btn background-btn active" data-background="light" title="Light Background" type="button"><i class="far fa-square"></i></button>
+  <button class="btn btn-outline-dark navbar-btn background-btn" data-background="grid" title="Checkboard background" type="button"><i class="fas fa-th-large"></i></button>
+  <button class="btn btn-outline-dark navbar-btn background-btn" data-background="dark" title="Dark background" type="button"><i class="fas fa-square"></i></button>
+  <button class="btn btn-outline-dark navbar-btn background-btn active" data-background="light" title="Light Background" type="button"><i class="far fa-square"></i></button>
 </div>
 
 <div class="btn-group" role="group" aria-label="Zoom">
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_out" title="Zoom out"><i class="fa fa-search-minus"></i></button>
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_reset" title="No zoom">1:1</button>
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_in" title="Zoom in"><i class="fa fa-search-plus"></i></button>
-  <button type="button" class="btn btn-default navbar-btn zoom-btn" id="zoom_full" title="Max zoom"><i class="fa fa-arrows-alt"></i></button>
+  <button type="button" class="btn btn-outline-dark navbar-btn zoom-btn" id="zoom_out" title="Zoom out"><i class="fa fa-search-minus"></i></button>
+  <button type="button" class="btn btn-outline-dark navbar-btn zoom-btn" id="zoom_reset" title="No zoom">1:1</button>
+  <button type="button" class="btn btn-outline-dark navbar-btn zoom-btn" id="zoom_in" title="Zoom in"><i class="fa fa-search-plus"></i></button>
+  <button type="button" class="btn btn-outline-dark navbar-btn zoom-btn" id="zoom_full" title="Max zoom"><i class="fa fa-arrows-alt"></i></button>
 </div>
 
 <div class="btn-group" role="group" aria-label="Border">
-  <button type="button" class="btn btn-default navbar-btn border-btn" data-border="0" title="No border">None</button>
-  <button type="button" class="btn btn-default navbar-btn border-btn active" data-border="1" title="Thin border">Thin</button>
-  <button type="button" class="btn btn-default navbar-btn border-btn" data-border="4" title="Thick border">Thick</button>
+  <button type="button" class="btn btn-outline-dark navbar-btn border-btn" data-border="0" title="No border">None</button>
+  <button type="button" class="btn btn-outline-dark navbar-btn border-btn active" data-border="1" title="Thin border">Thin</button>
+  <button type="button" class="btn btn-outline-dark navbar-btn border-btn" data-border="4" title="Thick border">Thick</button>
 </div>
 
-<a class="btn btn-default navbar-btn hidden-xs" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="auto bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></a>
-<a class="btn btn-default navbar-btn hidden-xs" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
-<a class="btn btn-default navbar-btn" href="/" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
+<a class="btn btn-outline-dark navbar-btn hidden-xs" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></a>
+<a class="btn btn-outline-dark navbar-btn hidden-xs" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
+<a class="btn btn-outline-dark navbar-btn" href="/" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
 			
-			<p class="navbar-text navbar-right hidden-xs"><a href="/index.html" class="navbar-link">Vector Logo Zone</a></p>
+			<p class="navbar-text mb-0 navbar-right hidden-xs"><a href="/index.html" class="navbar-link">Vector Logo Zone</a></p>
 		</div>
 	</nav>
 	<div id="preview-container">
-		<img id="preview-image" src="/images/preview/loading.gif" crossorigin="anonymous" />
+		<img id="preview-image" src="/images/spinner.svg" crossorigin="anonymous" style="width:64px;height:64px;"/>
 	</div><!--/container-->
 {% include google-analytics.html %}
 <script>
@@ -79,7 +79,7 @@ layout: none
 	{
 		var navbarHeight = $(".navbar").outerHeight();
 		$("#preview-container").css("height", ($(window).innerHeight() - navbarHeight) + "px");
-		$("#preview-container").css("top", navbarHeight + "px");
+		//$("#preview-container").css("top", navbarHeight + "px");
 	}
 
 	$(document).ready(function() {
@@ -90,10 +90,15 @@ layout: none
 		{
 			console.log("INFO: loading image " + imgUrl);
 			$("#preview-image").bind('load', function(e) {
-                console.log("INFO: image loaded");
                 var img = $("#preview-image")[0];
-                img.width = img.naturalWidth;
-                img.height = img.naturalHeight;
+                console.info("INFO: image loaded (" + img.naturalWidth + "x" + img.naturalHeight + ")");
+                $(img).attr("style", "");       // clear spinner size
+                var full = $("#preview-container")[0];
+                var zoomX = full.clientWidth / img.naturalWidth;
+                var zoomY = full.clientHeight / img.naturalHeight;
+                var newZoom = Math.min(zoomX, zoomY) * 0.75;
+                img.width = img.naturalWidth * newZoom;
+                img.height = img.naturalHeight * newZoom;
             });
 
             $("#color_analysis").bind('click', function(e) {
@@ -135,8 +140,8 @@ layout: none
                         $("#color_analysis").popover('show');
                         console.log("shown");
                     },
-                    timeout: 5000,
-                    url: "https://color-analysis.glitch.me/api"
+                    timeout: 10000,
+                    url: "https://color.vectorlogo.zone/api"
                 });
                 //return false;
             });
