--- a/www/search.html
+++ b/www/search.html
@@ -21,8 +21,10 @@ title: Search Logos
 </div>
 
 <div class="row clearfix">
-    <p id="pending-tip" style="display:none;">The following logos are on the &quot;To Do&quot; list and should be ready shortly.</p>
-    <ul id="pending"></ul>
+    <div class="col">
+        <p id="pending-tip" class="alert alert-primary" style="display:none;">The following logos are on the &quot;To Do&quot; list and should be ready shortly.</p>
+        <ul id="pending"></ul>
+    </div>
 </div>
 
 <script src="/js/lunr.min.js"></script>
