report: official logo comparison

--- a/www/report/index.html
+++ b/www/report/index.html
@@ -33,6 +33,7 @@ redirect_from: /logos/links.html
     <li><a href="ar21-vs-card.html" rel="nofollow">ar21 vs card</a> - Make sure the raster versions (with rsvg) look the same as the vector.</li>
     <li><a href="icon-vs-favicon.html" rel="nofollow">icon vs favicon</a> - Compare icon vs favicon</li>
     <li><a href="icon-vs-tile.html" rel="nofollow">icon vs tile</a> - Compare the icons and tiles.</li>
+    <li><a href="official-vs-all.html" rel="nofollow">official vs all</a> - Compare with the official logo.</li>
     <li><a href="tile-vs-supertiny.html" rel="nofollow">tile vs SuperTinyIcons</a> - Compare the tiles with images from <a href="https://www.github.com/edent/SuperTinyIcons">edent/SuperTinyIcons</a>.</li>
     <li><a href="icon-vs-svgporn.html" rel="nofollow">icon vs SVGPorn</a> - Compare the icons with images from <a href="https://www.svgporn.com/">SVGPorn</a>.</li>
 </ul>
