--- a/www/support/credits.html
+++ b/www/support/credits.html
@@ -1,29 +1,6 @@
 ---
 layout: default
 title: Credits
+redirect_to:
+ - https://www.github.com/VectorLogoZone/vectorlogozone#credits
 ---
-<div class="row">
-<p>These are the people, services and tools behind VectorLogoZone</p>
-</div>
-
-<div class="row logo-container">
-{% for credit in site.data.credits -%}
-{%- if credit.id -%}
-    <a href="{{ credit.url }}?utm_source=vectorlogozone&utm_medium=referrer"><img src="/logos/{{ credit.id }}/{{credit.id}}-ar21.svg" alt="{{ credit.name }}" title="{{ credit.name }} - {{ credit.description }}" /></a>
-{% endif -%}
-{%- endfor -%}
-</div>
-
-<div class="row">
-    <p>The following are, alas, missing their logos!</p>
-</div>
-
-<div class="row logo-container">
-    <ul>
-    {% for credit in site.data.credits -%}
-        {%- if credit.id -%}{% else -%}
-        <li><a href="{{ credit.url }}?utm_source=vectorlogozone&utm_medium=referrer">{{ credit.name }} - {{ credit.description }}</a></li>
-        {% endif -%}
-    {%- endfor -%}
-    </ul>
-</div>
