--- a/www/report/most-social.html
+++ b/www/report/most-social.html
@@ -7,7 +7,7 @@ noindex: true
 
 {% assign sorted_pages = site.pages | sort:'sort' %}
 
-<table class="table table-bordered">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>Logo</th>
