--- a/www/report/notes.html
+++ b/www/report/notes.html
@@ -7,7 +7,7 @@ noindex: true
 
 {% assign sorted_pages = site.pages | sort:'sort' %}
 {% assign count = 0 %}
-<table class="table table-bordered">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>ID</th>
