--- a/www/report/unknown-meta.html
+++ b/www/report/unknown-meta.html
@@ -18,7 +18,7 @@ noindex: true
 
 {%- assign sorted_pages = site.pages | sort:'sort' %}
 {%- assign logocount = 0 %}
-<table class="table table-bordered">
+<table class="table table-striped table-bordered">
     <thead>
     <tr>
         <th>Logo</th>
