--- a/www/support/index.html
+++ b/www/support/index.html
@@ -92,7 +92,7 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>What did you use to make this site?</h3>
-        <p>Check out the <a href="credits.html">credits</a> page (featuring images from {{ site.title }}, of course).</p>
+        <p>Check out the <a href="https://www.github.com/VectorLogoZone/vectorlogozone#credits">credits</a> page (featuring images from {{ site.title }}, of course).</p>
     </div>
 </div>
 
