responsive fixes for Bootstrap 4 upgrade

--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -37,7 +37,7 @@ layout: none
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top py-1">
 		<div class="container">
-<p class="navbar-text mb-0 hidden-xs hidden-sm" href="/">Image Preview</p>
+<p class="navbar-text mb-0 d-none d-md-block" href="/">Image Preview</p>
 <div class="btn-group" role="group" aria-label="Background">
   <button class="btn btn-outline-dark navbar-btn background-btn" data-background="grid" title="Checkboard background" type="button"><i class="fas fa-th-large"></i></button>
   <button class="btn btn-outline-dark navbar-btn background-btn" data-background="dark" title="Dark background" type="button"><i class="fas fa-square"></i></button>
@@ -57,11 +57,11 @@ layout: none
   <button type="button" class="btn btn-outline-dark navbar-btn border-btn" data-border="4" title="Thick border">Thick</button>
 </div>
 
-<a class="btn btn-outline-dark navbar-btn hidden-xs" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></a>
-<a class="btn btn-outline-dark navbar-btn hidden-xs" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
+<a class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></a>
+<a class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
 <a class="btn btn-outline-dark navbar-btn" href="/" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
 			
-			<p class="navbar-text mb-0 navbar-right hidden-xs"><a href="/index.html" class="navbar-link">Vector Logo Zone</a></p>
+			<p class="navbar-text mb-0 navbar-right d-none d-sm-block"><a href="/index.html" class="navbar-link">Vector Logo Zone</a></p>
 		</div>
 	</nav>
 	<div id="preview-container">
